--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,22 @@ body {
     text-decoration: none;
     color: inherit; }
 
+.side-nav__icon {
+  width: 1.75rem;
+  height: 1.75rem; }
+
+.legal {
+  font-size: 1.2rem;
+  color: var(--color-grey-light-4);
+  text-align: center;
+  padding: 2.5rem;
+  transition: all 0.2s; }
+  .legal a:link,
+  .legal a:visited {
+    color: inherit; }
+  .legal a:hover {
+    color: var(--color-grey-light-1); }
+
 .container {
   max-width: 120rem;
   margin: 8rem auto;
@@ -148,9 +164,13 @@ body {
 
 .sidebar {
   background-color: var(--color-grey-dark-1);
-  flex: 0 0 18%; }
+  flex: 0 0 18%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; }
 
 .hotel-view {
   background-color: #fff;
   background-color: orangered;
+  height: 80rem;
   flex: 1; }
