--- a/css/style.css
+++ b/css/style.css
@@ -178,6 +178,12 @@ body {
   .legal a:hover {
     color: var(--color-grey-light-1); }
 
+.gallery {
+  display: flex; }
+  .gallery__photo {
+    width: 100%;
+    display: block; }
+
 .container {
   max-width: 120rem;
   margin: 8rem auto;
